--- a/compose.yml
+++ b/compose.yml
@@ -8,10 +8,14 @@ x-app: &default-app
       - "RAILS_ENV=${RAILS_ENV:-production}"
       - "NODE_ENV=${NODE_ENV:-production}"
   depends_on:
-    - "postgres"
-    - "redis"
+    postgres:
+      condition: service_healthy
+    redis:
+      condition: service_healthy
   env_file:
     - ".env"
+  environment:
+    TZ: Asia/Tokyo
   restart: "${DOCKER_RESTART_POLICY:-unless-stopped}"
   stop_grace_period: "3s"
   tty: true
@@ -44,10 +48,19 @@ services:
           cpus: "${DOCKER_POSTGRES_CPUS:-0}"
           memory: "${DOCKER_POSTGRES_MEMORY:-0}"
     environment:
+      TZ: Asia/Tokyo
+      PGTZ: Asia/Tokyo
       POSTGRES_USER: "${POSTGRES_USER}"
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
       # POSTGRES_DB: "${POSTGRES_DB}"
+      PGUSER: "${POSTGRES_USER}"
     image: "postgres:15.1-bullseye"
+    healthcheck:
+      test: ["CMD", "pg_isready"]
+      interval: "10s"
+      timeout: "3s"
+      start_period: "5s"
+      retries: 3
     profiles: ["postgres"]
     restart: "${DOCKER_RESTART_POLICY:-unless-stopped}"
     stop_grace_period: "3s"
@@ -61,6 +74,12 @@ services:
           cpus: "${DOCKER_REDIS_CPUS:-0}"
           memory: "${DOCKER_REDIS_MEMORY:-0}"
     image: "redis:7.0.7-bullseye"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: "10s"
+      timeout: "3s"
+      start_period: "5s"
+      retries: 3
     profiles: ["redis"]
     restart: "${DOCKER_RESTART_POLICY:-unless-stopped}"
     stop_grace_period: "3s"
