--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "autoprefixer": "10.4.13",
     "esbuild": "0.16.11",
     "postcss": "8.4.20",
+    "postcss-cli": "^10.1.0",
     "postcss-import": "15.1.0",
-    "tailwindcss": "3.2.4"
+    "postcss-nested": "^6.0.0"
   },
   "scripts": {
     "build": "./run yarn:build",
