--- a/compose.yml
+++ b/compose.yml
@@ -9,13 +9,13 @@ x-app: &default-app
       - "NODE_ENV=${NODE_ENV:-production}"
   depends_on:
     postgres:
-      condition: service_healthy
+      condition: "service_healthy"
     redis:
-      condition: service_healthy
+      condition: "service_healthy"
   env_file:
     - ".env"
   environment:
-    TZ: Asia/Tokyo
+    TZ: "Asia/Tokyo"
   restart: "${DOCKER_RESTART_POLICY:-unless-stopped}"
   stop_grace_period: "3s"
   tty: true
@@ -48,8 +48,8 @@ services:
           cpus: "${DOCKER_POSTGRES_CPUS:-0}"
           memory: "${DOCKER_POSTGRES_MEMORY:-0}"
     environment:
-      TZ: Asia/Tokyo
-      PGTZ: Asia/Tokyo
+      TZ: "Asia/Tokyo"
+      PGTZ: "Asia/Tokyo"
       POSTGRES_USER: "${POSTGRES_USER}"
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
       # POSTGRES_DB: "${POSTGRES_DB}"
