--- a/compose.yml
+++ b/compose.yml
@@ -112,6 +112,12 @@ services:
         limits:
           cpus: "${DOCKER_WORKER_CPUS:-0}"
           memory: "${DOCKER_WORKER_MEMORY:-0}"
+    healthcheck:
+      test: "curl localhost:7433"
+      interval: "60s"
+      timeout: "3s"
+      start_period: "5s"
+      retries: 3
     profiles: ["worker"]
 
   cable:
